--- a/ios/AppCenter-Config.plist
+++ b/ios/AppCenter-Config.plist
@@ -7,9 +7,9 @@
    Created by Nattapat Siripin on 22/4/2564 BE.
    Copyright (c) 2564 BE ___ORGANIZATIONNAME___. All rights reserved.
 -->
-<plist version="1.0">
+<<plist version="1.0">
     <dict>
     <key>AppSecret</key>
-    <string>ffe4ff81-d83a-419e-98a6-f67edc6dad39</string>
+    <string>a844f983-2bc8-4c4d-b809-7baa960a55d0</string>
     </dict>
 </plist>
