Change Apple Config file

--- a/ios/AppCenter-Config.plist
+++ b/ios/AppCenter-Config.plist
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "https://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <!--
    AppCenter-Config.plist
    MyNewBareApp
@@ -7,7 +7,8 @@
    Created by Nattapat Siripin on 22/4/2564 BE.
    Copyright (c) 2564 BE ___ORGANIZATIONNAME___. All rights reserved.
 -->
-<<plist version="1.0">
+
+<plist version="1.0">
     <dict>
     <key>AppSecret</key>
     <string>a844f983-2bc8-4c4d-b809-7baa960a55d0</string>
